--- a/index.html
+++ b/index.html
@@ -12,47 +12,39 @@
 
   gtag('config', 'G-JHXX8JNY0K');
 </script>
-	
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/globalstyle.css">
+<link rel="stylesheet" href="styles/home.css">
+<link rel="stylesheet" href="styles/contact.css">
+<script src="https://kit.fontawesome.com/5f5bb1c58f.js" crossorigin="anonymous"></script>
+<script src="global.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>SOES | Contact</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!-- link to css of this file -->
+<link rel="stylesheet" href="styles/index.css">
+<!-- end of link to css  -->
 
-      
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+<!-- end of fontAwesome -->
 
-    <link rel="stylesheet" href="styles/bootnavbar.css" />
+<!-- Iconify SVG Framework -->
+<script src="https://code.iconify.design/2/2.1.1/iconify.min.js"></script>
+<!-- end of SVG -->
 
-    <title>School of engineering Society</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- link to css of this file -->
-    <link rel="stylesheet" href="styles/index.css">
-    <!-- end of link to css  -->
-
-    <!-- FontAwesome -->
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-    <!-- end of fontAwesome -->
-
-    <!-- Iconify SVG Framework -->
-    <script src="https://code.iconify.design/2/2.1.1/iconify.min.js"></script>
-    <!-- end of SVG -->
-	
-    <link rel="shortcut icon" type="image/x-icon" href="images/logo.jpeg" />
-    <meta
-      name="description"
-      content="SOES"
-    />
-    <meta
-      name="keywords"
-      content="SOES"
-    />
+<link rel="shortcut icon" type="image/x-icon" href="images/logo.jpeg" />
+<meta
+  name="description"
+  content="SOES"
+/>
+<meta
+  name="keywords"
+  content="SOES"
+/>
   </head>
 
   <body>
@@ -565,17 +557,20 @@
 </footer>
  <!-- end of footer -->
 </div>
-  <!-- JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="js/index.js"></script>
-  <!-- end of script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/bootnavbar.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script>
-      new bootnavbar();
-    </script>
+ 
+<!-- JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="js/index.js"></script>
+<!-- end of script -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/bootnavbar.js"></script>
+  <script>
+    new bootnavbar();
+  </script>
+<script>
+    setWidth("underline", getWidth("welcome"));
+</script>
   </body>
 </html>
